baml_language/crates/baml_tests/snapshots/diagnostic_errors/captured_field_chain/baml_tests__diagnostic_errors__captured_field_chain__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Inner {
  value: int
}
class user.Outer {
  inner: user.Inner
  name: string
}
function user.from_json(j: baml.json.json) -> user.Inner  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Outer  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.test_captured_chain(outer: user.Outer) -> int  [expr] {
  { let result = [1].map((x) -> { {  } outer.inner.value }) } result[0]
}
function user.test_captured_method(outer: user.Outer) -> string  [expr] {
  { let result = [1].map((x) -> { {  } outer.name }) } result[0]
}
function user.test_deep_map_chain(data: map<string, map<string, map<string, int>>>) -> int  [expr] {
  {  } data.a.b.c
}
function user.test_map_chain(data: map<string, map<string, int>>) -> int  [expr] {
  {  } data.a.b
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}

--- captures ---
lambda (x) in test_captured_chain: captures [outer]
lambda (x) in test_captured_method: captures [outer]
