baml_language/crates/baml_tests/snapshots/diagnostic_errors/captured_field_chain/baml_tests__diagnostic_errors__captured_field_chain__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Inner {
  value: int
}
function user.Inner.to_json(self: user.Inner) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Inner>(self)) : baml.json.json
}
function user.Inner.from_json(j: baml.json.json) -> user.Inner throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Inner
}
class user.Outer {
  inner: user.Inner
  name: string
}
function user.Outer.to_json(self: user.Outer) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Outer>(self)) : baml.json.json
}
function user.Outer.from_json(j: baml.json.json) -> user.Outer throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Outer
}
function user.test_captured_chain(outer: user.Outer) -> int throws never {
  { : int
    let result = [1].map<U, E>((x) -> { ... }) : int[]
    result[0] : int
  }
}
lambda user.test_captured_chain {
}
function user.test_captured_method(outer: user.Outer) -> string throws never {
  { : string
    let result = [1].map<U, E>((x) -> { ... }) : string[]
    result[0] : string
  }
}
lambda user.test_captured_method {
}
function user.test_map_chain(data: map<string, map<string, int>>) -> int throws never {
  { : unknown
    data.a.b : unknown
  }
  !! 1131..1142: type `map<string, map<string, int>>` has no member `a`
}
function user.test_deep_map_chain(data: map<string, map<string, map<string, int>>>) -> int throws never {
  { : unknown
    data.a.b.c : unknown
  }
  !! 1275..1288: type `map<string, map<string, map<string, int>>>` has no member `a`
}
class user.Inner$stream {
  value: null | int
}
class user.Outer$stream {
  inner: null | user.Inner$stream
  name: null | string
}
