baml_language/crates/baml_tests/snapshots/diagnostic_errors/captured_field_chain/baml_tests__diagnostic_errors__captured_field_chain__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 27364
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type `map<string, map<string, int>>` has no member `a`
    ╭─[ captured_field_chain.baml:31:70 ]
    │
 31 │ ╭─▶ function test_map_chain(data: map<string, map<string, int>>) -> int {
 32 │ ├─▶   data.a.b
    │ │                
    │ ╰──────────────── type `map<string, map<string, int>>` has no member `a`
    │     
    │     Note: Error code: E0007
────╯

  [type] Error: type `map<string, map<string, map<string, int>>>` has no member `a`
    ╭─[ captured_field_chain.baml:36:88 ]
    │
 36 │ ╭─▶ function test_deep_map_chain(data: map<string, map<string, map<string, int>>>) -> int {
 37 │ ├─▶   data.a.b.c
    │ │                  
    │ ╰────────────────── type `map<string, map<string, map<string, int>>>` has no member `a`
    │     
    │     Note: Error code: E0007
────╯
